[package]
name = "image-test"
version = "0.0.0"
authors = ["astral4"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/astral4/image-test"
license = "MIT OR Apache-2.0"

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["avif-encoder", "png"] }

[profile.release]
panic = "abort"
lto = true
